fix(GTNHWikiSearch): 修复物品名称编码问题
- 移除了不必要的 StandardCharsets 导入
- 将 URLEncoder.encode 的字符集参数从 StandardCharsets.UTF_8 改为字符串 "UTF-8"
- 保持了异常处理逻辑不变